# clarinet

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: AddGitSubmodule.cmake  AddSubmodule.cmake  CMockaIncludeBefore.cmake  Clarinet.pc.in  ClarinetConfig.cmake.in  DefineSystemVariables.cmake  ENetIncludeBefore.cmake  FetchCMocka.cmake  FetchCatch2.cmake  MbedTLSIncludeBefore.cmake  cmakeconfig.h.in  config.h.in
cmake/Helpers/: check_getnetbyname_r.c  check_strerror_r.c
cmake/Modules/: AddGitSubmodule.cmake  ENetIncludeBefore.cmake  EnableCMP0048.cmake  FetchCMocka.cmake
cmake/helpers/: check_asprintf.c  check_eagain.c  check_enotsup.c  check_getnetbyname_r.c  check_ipv6_dualstack.c  check_so_reuseport.c  check_strerror_r.c  check_vasprintf.c
cmake/templates/: catch2.runsettings.in  clarinet.pc.in  config.cmake.in  config.h.in
include/clarinet/: clarinet.h
src/: clarinet.c  clarinet.rc  portability.h
src/compat/: addr.c  addr.h  compat.h  error.c  error.h
src/compat/fallback/: ffs.c
src/portable/: addr.c  addr.h
src/portable/fallback/: asprintf.c  ffs.c  strerror_s.c  strlcat.c  strlcpy.c  strtok_r.c
src/protocols/: dtlc.c  enet.c
tests/: CMakeLists.txt  test_addr_interface.cmake  test_details_interface.cmake  test_udp_interface.cmake
tests/cmake/: test_addr_interface.cmake  test_library_interface.cmake  test_socket_interface.cmake
tests/src/: test.cpp  test.h  test_addr_interface.c  test_addr_interface.cpp  test_control_interface.inl  test_details_interface.c  test_details_interface.cpp  test_finalize.c  test_initialize.c  test_library_interface.cpp  test_socket_interface.cpp  test_udp_interface.cpp
